css/styles.css
/*-----------------------------------
- Global Variables
-----------------------------------*/

:root {
	/* Color Palette */
	--color-white: #fff;
	--color-gray-lightest: #ddd;
	--color-gray-lighter: #ccc;
	--color-gray-light: #aaa;
	--color-gray: #999;
	--color-gray-dark: #666;
	--color-gray-darker: #333;
	--color-gray-darkest: #111;
	--color-black: #000;
	--color-purple-lightest: #f9f2ff;
	--color-purple-light: #b66fe5;
	--color-purple: #9257b9;
	--color-purple-dark: #7935a6;
	--color-purple-darkest: #49136d;
	--color-red: #da2525;

	/* Font Sizes */
	--font-size-h1: 2.625rem; /* 42px */
	--font-size-h2: 2.25rem; /* 36px */
	--font-size-h3: 1.75rem; /* 28px */
	--font-size-h4: 1.5rem; /* 24px */
	--font-size-h5: 1.3125rem; /* 21px */
	--font-size-h6: 1.125rem; /* 18px */
	--font-size-p: 1rem; /* 16px */
	--font-size-small: 0.75rem; /* 12px */

	/* Line Heights */
	--line-height-large: 1.5;
	--line-height-medium: 1.333;
	--line-height-small: 1.125;
}

@media all and (min-width: 1025px) {
	:root {
		--font-size-h1: 4rem; /* 64px */
		--font-size-h2: 3rem; /* 48px */
		--font-size-h3: 2.25rem; /* 36px */
		--font-size-h4: 1.75rem; /* 28px */
		--font-size-h5: 1.5rem; /* 24px */
		--font-size-h6: 1.3125rem; /* 21px */
		--font-size-p: 1.125rem; /* 18px */
		--font-size-small: 0.875rem; /* 14px */
	}
}

/*-----------------------------------
- General Styles
-----------------------------------*/

body {
	background-color: var(--color-purple-lightest);
	font-family: 'Ubuntu', 'Tahoma', sans-serif;
	font-size: var(--font-size-p);
	color: var(--color-gray-darker);
	line-height: var(--line-height-large);
}

h1, h2, h3, h4, h5, h6 {
	margin-bottom: 20px;
	font-weight: 700;
}

h1, h2, h3 {
	line-height: var(--line-height-small);
	letter-spacing: -0.025em;
}

h4, h5, h6 {
	line-height: var(--line-height-medium);
}

h1 {
	font-size: var(--font-size-h1);
}

h2 {
	font-size: var(--font-size-h2);
}

h3 {
	font-size: var(--font-size-h3);
}

h4 {
	font-size: var(--font-size-h4);
}

h5 {
	font-size: var(--font-size-h5);
}

h6 {
	font-size: var(--font-size-h6);
}

p {
	margin-bottom: 20px;
}

p:last-child {
	margin-bottom: 0;
}

small {
	font-size: var(--font-size-small);
	color: var(--color-gray-dark);
}

a {
	color: var(--color-purple-dark);
	text-decoration: underline;
	transition: color 300ms ease;
}

a:hover, a:focus {
	color: var(--color-purple-darkest);
}

@media all and (min-width: 1025px) {
	h1, h2, h3 {
		margin-bottom: 30px;
	}
}

/*-----------------------------------
- Buttons
-----------------------------------*/

.button {
	--border-color: var(--color-purple-light);
	--background-color: var(--color-purple-light);
	--color: var(--color-white);
	--hover-border-color: var(--color-purple);
	--hover-background-color: var(--color-purple);
	--hover-color: var(--color-white);

	display: inline-block;
	border: 2px solid var(--border-color);
	border-radius: 7px;
	padding: 10px 20px;
	background-color: var(--background-color);
	font-weight: 500;
	color: var(--color);
	appearance: none;
	text-align: center;
	text-decoration: none;
	vertical-align: top;
	transition: border-color 300ms ease,
		background-color 300ms ease,
		color 300ms ease;
}

.button.button-secondary {
	--background-color: var(--color-white);
	--color: var(--color-purple-dark);
}

.button:hover, .button:focus {
	border-color: var(--hover-border-color);
	background-color: var(--hover-background-color);
	color: var(--hover-color);
}

.button.button-large {
	padding: 15px 20px;
	font-size: var(--font-size-h6);
}

@media all and (min-width: 1025px) {
	.button {
		padding-inline: 15px;
	}

	.button-large {
		border-radius: 10px;
		border-width: 3px;
		padding: 20px 30px;
		font-size: var(--font-size-h5);
	}
}

/*-----------------------------------
- Form Elements
-----------------------------------*/

.form-control {
	margin-bottom: 20px;
}

.form-control > label {
	display: block;
	margin-bottom: 10px;
	font-weight: 500;
}

.form-control input[type="text"],
.form-control textarea {
	display: block;
	width: 100%;
}

.form-buttons {
	display: flex;
	align-items: center;
	justify-content: center;
	gap: 10px;
	margin-top: 20px;
}

input[type="text"],
textarea {
	border: 2px solid var(--color-gray-light);
	border-radius: 7px;
	padding: 10px 20px;
	appearance: none;
}

input::placeholder,
textarea::placeholder {
	color: var(--color-gray-dark);
}

input[type="text"] {
	line-height: 1;
}

textarea {
	height: 150px;
	resize: none;
}

button:not([disabled]) {
	cursor: pointer;
}

dialog input[type="text"],
dialog textarea,
dialog .button {
	padding-block: 10px;
}

@media all and (min-width: 1025px) {
	input[type="text"],
	textarea {
		padding-block: 15px;
	}
}


/*-----------------------------------
- Dialog Boxes/Modal Windows
-----------------------------------*/

dialog {
	--close-icon-size: var(--font-size-h6);

	position: absolute;
	top: 50%;
	left: 50%;
	max-width: calc(100% - 40px);
	border: none;
	border-radius: 10px;
	background-color: var(--color-white);
	color: inherit;
	box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.16);
	transform: translate(-50%, -50%);
	z-index: 100;
}

dialog h2 {
	margin-bottom: 10px;
	padding-right: calc(var(--close-icon-size) + 20px);
	font-size: var(--font-size-h3);
}

.dialog-close-button {
	position: absolute;
	top: 20px;
	right: 20px;
	width: var(--close-icon-size);
	height: var(--close-icon-size);
	border: none;
	padding: 0;
	background: none;
	font-size: var(--close-icon-size);
	line-height: 1;
	color: var(--color-gray-darker);
	text-indent: -9999rem;
	overflow: hidden;
	appearance: none;
	transition: color 300ms ease;
}

.dialog-close-button::before {
	position: absolute;
	top: 50%;
	left: 50%;
	content: '\f00d';
	font-family: 'Font Awesome 7 Free';
	font-weight: 700;
	text-indent: 0;
	transform: translate(-50%, -50%);
}

.dialog-close-button:hover,
.dialog-close-button:focus {
	color: var(--color-purple);
}


/*-----------------------------------
- Details and Summary (Accordions)
-----------------------------------*/

p + details {
	margin-top: 30px;
}

details {
	background-color: var(--color-white);
	margin-bottom: 20px;
	border-radius: 10px;
	padding: 20px;
	box-shadow: 0 5px 10px rgba(0, 0, 0, 0.16);
}

details:last-child {
	margin-bottom: 0;
}

details > h3 {
	margin-bottom: 10px;
	font-size: var(--font-size-h5);
}

summary {
	position: relative;
	padding-right: 20px;
	list-style: none;
	cursor: pointer;
}

summary::after {
	content: '\f054';
	position: absolute;
	top: 50%;
	right: 0;
	font-family: 'Font Awesome 7 Free';
	font-size: var(--font-size-h5);
	font-weight: 700;
	color: var(--color-purple);
	line-height: 1;
	transform: translateY(-50%) rotate(0deg);
	transition: transform 300ms ease;
}

summary h2 {
	font-size: var(--font-size-h5);
	line-height: var(--line-height-medium);
	letter-spacing: 0em;
}

details:not([open]) summary h2 {
	margin-bottom: 0;
}

details[open] summary::after {
	transform: translateY(-50%) rotate(90deg);
}

details[open] summary h2 {
	margin-bottom: 10px;
}

@media all and (min-width: 1025px) {
	p + details {
		margin-top: 40px;
	}

	details {
		border-radius: 20px;
		box-shadow: 0 10px 20px rgba(0, 0, 0, 0.16);
	}

	details > h3 {
		margin-bottom: 20px;
	}

	details[open] summary h2 {
		margin-bottom: 20px;
	}
}

